// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert Component > should display icons correctly 1`] = `
<div
  class="sqi-alert sqi-alert-success sqi-alert-motion sqi-alert-motion-entered"
  role="alert"
>
  <div
    class="sqi-alert-icon"
  >
    <span
      aria-label="check-circle-filled"
      class="sqi-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    class="sqi-alert-content"
  >
    <div
      class="sqi-alert-description"
    >
      Success message
    </div>
  </div>
</div>
`;

exports[`Alert Component > should display icons correctly 2`] = `
<div
  class="sqi-alert sqi-alert-info sqi-alert-motion sqi-alert-motion-entered"
  role="alert"
>
  <div
    class="sqi-alert-content"
  >
    <div
      class="sqi-alert-description"
    >
      No icon message
    </div>
  </div>
</div>
`;

exports[`Alert Component > should render basic Alert correctly 1`] = `
<div
  class="sqi-alert sqi-alert-info sqi-alert-motion sqi-alert-motion-entered"
  role="alert"
>
  <div
    class="sqi-alert-icon"
  >
    <span
      aria-label="info-circle-filled"
      class="sqi-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    class="sqi-alert-content"
  >
    <div
      class="sqi-alert-description"
    >
      This is an alert message
    </div>
  </div>
</div>
`;

exports[`Alert Component > should render different types of Alert correctly 1`] = `
<div
  class="sqi-alert sqi-alert-success sqi-alert-motion sqi-alert-motion-entered"
  role="alert"
>
  <div
    class="sqi-alert-icon"
  >
    <span
      aria-label="check-circle-filled"
      class="sqi-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    class="sqi-alert-content"
  >
    <div
      class="sqi-alert-description"
    >
      Success message
    </div>
  </div>
</div>
`;

exports[`Alert Component > should render title and description correctly 1`] = `
<div
  class="sqi-alert sqi-alert-info sqi-alert-motion sqi-alert-motion-entered"
  role="alert"
>
  <div
    class="sqi-alert-icon"
  >
    <span
      aria-label="info-circle-filled"
      class="sqi-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        fill="none"
        focusable="false"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    class="sqi-alert-content"
  >
    <div
      class="sqi-alert-title"
    >
      Alert Title
    </div>
    <div
      class="sqi-alert-description"
    >
      Alert Description
    </div>
  </div>
</div>
`;
